--- a/Ozgrid/Ozgrid.csproj
+++ b/Ozgrid/Ozgrid.csproj
@@ -114,6 +114,7 @@
     <Reference Include="Microsoft.Vbe.Interop, Version=15.0.0.0, Culture=neutral, PublicKeyToken=71e9bce111e9429c, processorArchitecture=MSIL">
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
@@ -163,13 +164,6 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="ufRangeToClipboard.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ufRangeToClipboard.Designer.cs">
-      <DependentUpon>ufRangeToClipboard.cs</DependentUpon>
-    </Compile>
-    <Compile Include="VBAtoUDF.cs" />
     <Compile Include="WorkbookList.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -185,9 +179,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="ufRangeToClipboard.resx">
-      <DependentUpon>ufRangeToClipboard.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="WorkbookList.resx">
       <DependentUpon>WorkbookList.cs</DependentUpon>
     </EmbeddedResource>
